<resources>
    <string name="app_name">DOORSTEP</string>
    <string name="prompt_email">Email or Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="all">All</string>
    <string name="lost_pass">Forgot password?</string>
    <string name="delivery_system">Delivery System</string>
    <string name="address_title">Address</string>
    <string name="sample_address">Morning Glory (1st Floor), House 92, Road 13C, 1213, Dhaka</string>
    <string name="order_details">Order Details</string>
    <string name="call_now_text">Call Now</string>
    <string name="navigate_map">Navigate Address</string>
    <string name="row_title_two">Name</string>
    <string name="row_title_price_two">Price</string>
    <string name="row_title_quantity_two">Qty</string>
    <string name="row_title_total_two">Total</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="order_information">Order Details</string>
    <string name="sub_total">Sub-Total: </string>
    <string name="shipping_total">Shipping Price: </string>
    <string name="order_total">Grand Total: </string>
    <string name="change_password">Change Password</string>
    <string name="old_paddword">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="connfirm_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="my_job">MY JOB</string>
    <string name="my_job2">Waiter JOB</string>
    <string name="completed_job">RECENT JOB</string>
    <string name="order_place">PLACE ORDER</string>
    <string name="profile">PROFILE</string>
    <string name="rider">Runner</string>
    <string name="home">Home</string>
    <string name="recent">Recent</string>
    <string name="statement">Statement</string>
    <string name="menu">Menu</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="view_details">View Details</string>
    <string name="login_name">Login</string>
    <string name="ResName">Burger King ➞ Banani</string>
    <string name="user_name">Mahmud</string>
    <string name="phone">Phone Number</string>
    <string name="email">E-mail</string>
    <string name="order_number">Order Number: </string>
    <string name="order_status_accepted">Order Status: </string>
    <string name="time_elepted_30_min">Time Elapsed:</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="please_fill_all_field">Please fill all field correctly</string>
    <string name="mimimum_length_password">Password length must be at least 6 character</string>
    <string name="loading">Loading...</string>
    <string name="error_saving_date">Error Saving Data</string>
    <string name="error_calling_action">Error in server calling action</string>
    <string name="items">Items: </string>
    <string name="Pending">Placed</string>
    <string name="Ordered">Order Placed</string>
    <string name="Processing">Confirmed &amp; Processing</string>
    <string name="Deliver">Ready to Pickup</string>
    <string name="way">On Way</string>
    <string name="Delivered">Delivered</string>
    <string name="returned">Returned</string>
    <string name="cancel_customer">Canceled by Customer</string>
    <string name="cancel_call_agent">Canceled by Waiter</string>
    <string name="cancel_by_agent">Canceled by Kitchen Agent</string>
    <string name="order_cancel_by_agent">A order that you have assigned is cancelled by Restaurant Agent</string>
    <string name="order_cancel_by_callcenter_agent">A order that you have assigned is cancelled by Call center</string>
    <string name="error_into_server">Something went wrong</string>
    <string name="no_order">No order found</string>
    <string name="bdt">BDT </string>
    <string name="tk_sign">৳</string>
    <string name="runner_list">Runner List</string>
    <string name="no_order_found">No order found</string>
    <string name="logout">Logout</string>
    <string name="order_placed_inpantry">Order placed in pantry successfully</string>
    <string name="order_accepted_succesfull">Order accepted successfully</string>
    <string name="order_pickup_succesfull">Order pickup successfully</string>
    <string name="order_cancelled">Order declined successfully</string>
    <string name="ready_to_pickuup">READY TO PICKUP</string>
    <string name="order_ready_to_pickup">Order Ready To Pickup</string>
    <string name="order_ready_to_pickup_partially">Order Ready To Pickup Partially</string>
    <string name="order_delivery_succesfull">Order Delivered successfully</string>
    <string name="select_rider">SELECT RUNNER</string>
    <string name="password_new">New password must be 6 character</string>
    <string name="confirm_pass_must">Confirm password must be 6 character</string>
    <string name="old_pass_con_must">Old password must be 6 character</string>
    <string name="pass_conf_not_matched">Password and Confirm Password Not Matched</string>
    <string name="pass_change_succes">Password Changed Successfully</string>
    <string name="pass_change_failed">Password Changed Failed</string>
    <string name="assign_text">Assign</string>
    <string name="assign">Assign</string>
    <string name="call_now">Call Now</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Enter runner name</string>
    <string name="available">Available</string>
    <string name="un_available">Unavailable</string>
    <string name="km">KM</string>
    <string name="assign_rider">Assign Runner</string>
    <string name="success_rider_assign">Runner Assigned Successfully</string>
    <string name="failed_assign_rider">Failed to assign runner</string>
    <string name="change_rider">CHANGE RUNNER</string>
    <string name="assigned_rider">ASSIGNED RUNNER</string>
    <string name="default_notification_channel_id">1</string>
    <string name="new_order_placed">New order placed</string>
    <string name="a_new_order_placed">Click to open your order</string>
    <string name="new_order_cancel">Order canceled</string>
    <string name="new_message">Order Message</string>
    <string name="a_order_pickedup">Your order picked up by the runner</string>
    <string name="a_order_delivered">Your order delivered by the waiter</string>
    <string name="job_auto_canceled">Find this order into your order list</string>
    <string name="incoming_job">Incoming order</string>
    <string name="acknowledge_ment">Acknowledgement</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection2">The internet Connection appears to be offline. Please, select an active internet</string>
    <string name="have_connected_internet">Online</string>
    <string name="damaged">Damaged</string>
    <string name="rider_pickup">PICKUP FOOD</string>
    <string name="deliver_complete_statement">TOTAL DELIVERED</string>
    <string name="deliver_complete">DELIVERED</string>
    <string name="rider_accept">ACCEPT ORDER</string>
    <string name="inpantry">IN PANTRY</string>
    <string name="p_inpantry">P. IN PANTRY</string>
    <string name="p_delivered">P. Delivered</string>
    <string name="p_ready_to_pickup">P. Ready to pickup</string>
    <string name="p.on_way">P. On Way</string>
    <string name="food_placed_in_pantry">Food placed in IN PANTRY</string>
    <string name="ofcourse">Okey</string>
    <string name="close">Close</string>
    <string name="same_rider">Same runner</string>
    <string name="time_expired">Time Expired</string>
    <string name="wait">Wait!</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_pickup">CONFIRM PICKUP?</string>
    <string name="confirm_pickup_msg">Did you took food from kitchen and confirm to send next step.</string>
    <string name="confirm_deliver">CONFIRM DELIVER?</string>
    <string name="confirm_pantry">CONFIRM IN PANTRY?</string>
    <string name="confirm_deliver_msg">Did you give food to the customer and took bill</string>
    <string name="confirm_pantry_msg">Did you placed the food in pantry properly</string>
    <string name="confirm_accept">CONFIRM ACCEPT?</string>
    <string name="confirm_accept_msg">Are you sure want to accept this request?</string>
    <string name="info">Info</string>
    <string name="sure_logout">Are you sure want to logout?</string>
    <string name="new_order">NEW ORDER</string>
    <string name="processed_order">PROCESSED ORDER</string>
    <string name="ok">Ok</string>
    <string name="information_top">Information</string>
    <string name="verify_phn_number">Email or Phone Number</string>
    <string name="submit">SEND VERIFY CODE</string>
    <string name="verifu_phn">Enter information for verification</string>
    <string name="activation_code">Activation Code</string>
    <string name="SUBMIT_ACTIVATION_CODE">SUBMIT CODE</string>
    <string name="resend_verify_code">RESEND VERIFY SMS</string>
    <string name="sumit_code_ins">Submit verification code that sent into your phone. Wait a while if you did not get any SMS</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_phone_number">Type phone number</string>
    <string name="enter_email_address">Type email address</string>
    <string name="empty_field">Activation code is empty</string>
    <string name="activation_code_miss">Activation code missmatch</string>
    <string name="password_length_empty">Password length is empty</string>
    <string name="click_to_open_order">Click to open your new order</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="custom">Custom</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="amount">TOTAL SUBTOTAL</string>
    <string name="vat">VAT</string>
    <string name="delivery_charge">TOTAL CHARGE</string>
    <string name="grand_total">GRAND TOTAL</string>
    <string name="note_delivery">* Statement information is based on your outlet. All agent account in the same outlet will get the same statements</string>
    <string name="no_data_found">No order report found in the date range</string>
    <string name="not_valid_user">You are not authorized for this app. Please contact your support center for further information.</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="array_name">
        <item>Location</item>
        <item>Bar</item>
        <item>Pool side</item>
        <item>Billiard</item>
    </string-array>
</resources>