<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_36dp_agent"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recent"
        android:enabled="true"
        android:icon="@drawable/ic_history_black_36dp_agent"
        android:title="@string/recent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_statement"
        android:enabled="true"
        android:icon="@drawable/statement"
        android:title="@string/statement"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_menu"
        android:enabled="true"
        android:icon="@drawable/ic_menu_black_36dp_agent"
        android:title="@string/menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/delivered"
        android:title="@string/rider"
        app:showAsAction="ifRoom" />
</menu>