<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_my_job"
        android:enabled="true"
        android:icon="@drawable/ic_my_job"
        android:title="@string/my_job"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_my_completed_job"
        android:enabled="true"
        android:icon="@drawable/ic_completed_job"
        android:title="@string/completed_job"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_my_profile"
        android:enabled="true"
        android:icon="@drawable/ic_man_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />


</menu>