<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:weightSum="1.0">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:id="@+id/tx_order_number"
        android:text="@string/order_number"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tx_order_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_status_accepted"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tx_time_elaped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/time_elepted_30_min"
        android:textSize="14sp" />


</LinearLayout>
