<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/row_title_two"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Status"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/row_title_quantity_two"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/row_title_price_two"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />



        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/row_title_total_two"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />



    </LinearLayout>
</LinearLayout>