<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_day_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/tx_last_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight=".25"
            android:background="@drawable/sl_statemnt_draw_top_start"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/last_week"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tx_last_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"

            android:layout_weight=".25"
            android:background="@drawable/statemnt_draw_top_middle"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"

            android:paddingTop="8dp"
            android:text="@string/last_month"
            android:textColor="@color/tx_color"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tx_last_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"

            android:layout_weight=".25"
            android:background="@drawable/statemnt_draw_top_middle"

            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/last_year"
            android:textColor="@color/tx_color"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tx_last_custom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight=".25"
            android:background="@drawable/statemnt_draw_top_end"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/custom"
            android:textColor="@color/tx_color"
            android:textSize="12sp" />


    </LinearLayout>


</LinearLayout>